# vulkan-tutorial-uniform-buffers

./: CMakeLists.txt  README.md
3.2.Descriptor pool and sets/: CMakeLists.txt
